Added the photos for the Condo fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <string name="Casinos_Page_Title">Casinos</string>
 
     <string name="Condos_Page_Title">Condos</string>
+
+    <string name="River_Place">200 River Place</string>
 </resources>
